src/App.scss
@import '~@ux/intents/lib/index';
@import './scss/theme.scss';

$base-unit: 8px;
$spacing-xs: $base-unit / 2; // 4px
$spacing-s: $base-unit; // 8px
$spacing-m: $base-unit * 2; // 16px
$spacing-l: $base-unit * 3; // 24px
$spacing-xl: $base-unit * 5; // 40px

$color: #111;
$color--passive: #767676;

$colors--high-contrast: (
  "critical": $ux-feedbackHighContrastCritical-feedbackColor,
  "highlight": $ux-feedbackHighContrastHighlight-feedbackColor,
  "info": $ux-feedbackHighContrastNeutral-feedbackColor,
  "internal": $ux-feedbackHighContrastPassive-feedbackColor,
  "premium": $ux-feedbackHighContrastPremium-feedbackColor,
  "success": $ux-feedbackHighContrastSuccess-feedbackColor,
  "warning": $ux-feedbackHighContrastWarning-feedbackColor
);

$border-radius-form: 6px;

$alert-border-radius: 6px;
$alert-padding-right: $spacing-xl + $spacing-m; // 56px
$alert-inner-padding: $spacing-l $alert-padding-right $spacing-l $spacing-m;

$dismiss-button-border-radius: 6px; // from Figma minimal icon button
$dismiss-button-size: 20px;

$icon-size: 24px;

$font-smaller: 0.9rem;

/****************
 *** SETUP ******
 ***************/

.App {
  display: grid;
  grid-template-columns: 400px auto;
  height: fit-content;
  min-height: 100%;
  overflow-x: hidden;
  overflow-y: scroll;

  .section {
    display: flex;
    flex-direction: column;
    gap: $spacing-l;
    padding: $spacing-xl;
  }

  .settings {
    background-color: $ux-boxLowContrast-backgroundColor;

    &--actions {
      display: flex;
      flex-wrap: wrap;
      gap: $spacing-m;
    }

    &--block {
      input,
      textarea {
        border: 1px solid $ux-box-borderColor;
        border-radius: $border-radius-form;
        padding: $spacing-s;
        width: 100%;
      }

      input[type="radio"],
      input[type="checkbox"] {
        margin-right: $spacing-s;
        width: auto !important;
      }

      input:disabled {
        color: $color--passive;
      }
    }

    .label {
      display: block;
      font-size: $font-smaller;
      font-weight: bold;
    }

    .form-wrapper {
      align-items: center;
      display: flex;
    }
  }

  .examples {
    background-color: $ux-box-backgroundColor;
    overflow-x: hidden;
  }

  .mb-s {
    margin-bottom: $spacing-s;
  }

  .ml-m {
    margin-left: $spacing-m;
  }

  .ml-s {
    margin-left: $spacing-s;
  }

  .mt-s {
    margin-top: $spacing-s;
  }
}

/*********************
 *** NEW ALERT *******
 ********************/

.NewAlert {
  border-radius: $alert-border-radius;
  display: flex;
  flex-direction: row;
  gap: $spacing-m;
  max-width: 100%;
  min-width: 240px;
  overflow: hidden;
  position: relative;
  resize: horizontal;

  @each $color, $value in $colors--high-contrast {
    &.#{$color} {
      border: 1px solid $value;
      border-left: 8px solid $value;

      .Alert--icon svg path {
        fill: $value;
      }
    }
  }

  .Alert--content {
    align-items: center;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: $spacing-m;
    padding: $alert-inner-padding;
    width: 100%;
  }

  .Alert--icon-and-text-wrapper {
    display: flex;
    flex-basis: 70%;
    flex-direction: row;
    flex-grow: 1;
    flex-shrink: 1;
    gap: $spacing-m;

    .Alert--icon {
    height: $icon-size;
    min-height: $icon-size;
    min-width: $icon-size;
    width: $icon-size;
    }

    .Alert--text-lockup {
      display: flex;
      flex-direction: column;

      .Alert--header h3 {
        font-weight: 700;
        line-height: 120%;
      }

      .Alert--body p {
        line-height: 150%;
        margin-bottom: 0;
      }
    }
  }

  .Alert--action {
    display: flex;
    flex-basis: auto;
    flex-grow: 0;
    flex-shrink: 1;
    max-width: fit-content;
    padding-left: $spacing-xl;

    &.wrap-cta-label {
      .ux-button {
        flex-shrink: 1;
        min-width: unset;
        white-space: wrap;
      }
    }
  }
  
  .Alert--dismiss {
    align-items: center;
    background-color: transparent;
    border: none;
    border-radius: $dismiss-button-border-radius;
    cursor: pointer;
    display: flex;
    height: $dismiss-button-size;
    justify-content: center;
    position: absolute;
    right: $spacing-m;
    top: $spacing-m;
    width: $dismiss-button-size;

    &:hover {
      background-color: transparentize($color, 0.9);
    }
  }
}

